fix(a11y): improve focus indicator contrast

--- a/less/general.less
+++ b/less/general.less
@@ -67,10 +67,10 @@ address {
 General ones
 **********************************************/
 :focus {
-	outline: 2px #f00 dashed;
+	outline: 2px #e00 dashed;
 }
 :focus-visible {
-	outline: 2px #f00 dashed;
+	outline: 2px #e00 dashed;
 }
 :focus:not(:focus-visible) {
 	outline: none;
